@@ -153,7 +153,7 @@ void tst_QXmppSasl::testSuccess()
 
 void tst_QXmppSaslClient::testAvailableMechanisms()
 {
-    QCOMPARE(QXmppSaslClient::availableMechanisms(), QStringList() << "PLAIN" << "DIGEST-MD5" << "ANONYMOUS" << "X-FACEBOOK-PLATFORM" << "X-MESSENGER-OAUTH2");
+    QCOMPARE(QXmppSaslClient::availableMechanisms(), QStringList() << "PLAIN" << "DIGEST-MD5" << "ANONYMOUS" << "X-FACEBOOK-PLATFORM" << "X-MESSENGER-OAUTH2" << "X-OAUTH2");
 }
 
 void tst_QXmppSaslClient::testBadMechanism()
@@ -236,6 +236,26 @@ void tst_QXmppSaslClient::testFacebook()
     // challenge response
     QVERIFY(client->respond(QByteArray("version=1&method=auth.xmpp_login&nonce=AA4EFEE16F2AB64B131EEFFE6EACDDB8"), response));
     QCOMPARE(response, QByteArray("access_token=abcdefghijlkmno&api_key=123456789012345&call_id=&method=auth.xmpp_login&nonce=AA4EFEE16F2AB64B131EEFFE6EACDDB8&v=1.0"));
+
+    // any further step is an error
+    QVERIFY(!client->respond(QByteArray(), response));
+
+    delete client;
+}
+
+void tst_QXmppSaslClient::testGoogle()
+{
+    QXmppSaslClient *client = QXmppSaslClient::create("X-OAUTH2");
+    QVERIFY(client != 0);
+    QCOMPARE(client->mechanism(), QLatin1String("X-OAUTH2"));
+
+    client->setUsername("foo");
+    client->setPassword("bar");
+
+    // initial step returns data
+    QByteArray response;
+    QVERIFY(client->respond(QByteArray(), response));
+    QCOMPARE(response, QByteArray("\0foo\0bar", 8));
 
     // any further step is an error
     QVERIFY(!client->respond(QByteArray(), response));
