@@ -9,6 +9,7 @@ QXmpp 0.7.1 (Sep 3, 2012)
 -------------------------
 
   - Fix export of QXmppVCardPhone class.
+  - Add support for X-OAUTH2 authentication for Google Talk.
 
 QXmpp 0.7.0 (Sep 3, 2012)
 -------------------------
